Change markdown to kramdown, add SEO feature
Signed-off-by: Olivier Schonken <olivier.schonken@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ tagline:             Feeling adventurous?
 url: 				 https://olivierschonken.github.io
 paginate:            1
 baseurl:             ""
+markdown:			 kramdown
 
 # Assets
 #
@@ -32,8 +33,11 @@ pages_list:
   About: '/about/'
   Archive: '/archive/'
   Feed: '/atom.xml'
+plugins:
+  - jekyll-seo-tag
 
 # Gems
 gems:
   - jekyll-paginate
   - jekyll-gist
+
